scode/LETHAL/prob3/error.txt
  File "main.py", line 2
    for i in range n :
                   ^
SyntaxError: invalid syntax
